--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "genex",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Genex module for Node.js",
   "main": "./lib/index.js",
   "directories": {
@@ -8,9 +8,10 @@
   },
   "dependencies": {
     "ret": "~0.1.10",
-    "underscore": "~1.6.0"
+    "lodash": "~3.10.1"
   },
   "devDependencies": {
+    "assert": "~1.3.0",
     "mocha": "~1.17.1"
   },
   "scripts": {
