--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,21 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
+    "composite": true,
     "declaration": true,
-    "declarationDir": "declarations",
-    "downlevelIteration": true,
-    "lib": ["es2017"],
+    "esModuleInterop": true,
+    "lib": ["es6"],
     "module": "commonjs",
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "noImplicitReturns": true,
     "outDir": "build",
     "paths": { "*": ["types/*"] },
     "rootDir": "source",
-    "sourceMap": true,
-    "strictFunctionTypes": false,
+    "strictFunctionTypes": true,
     "strictNullChecks": false,
-    "target": "es5",
-    "types": ["node", "jest"]
+    "target": "es6"
   },
   "compileOnSave": true,
-  "exclude": ["node_modules", "tests"]
+  "exclude": ["node_modules", "tests"],
+  "include": ["source"]
 }
